--- a/src/components/PostForm.module.css
+++ b/src/components/PostForm.module.css
@@ -240,7 +240,7 @@
 .categoryItem {
     display: flex;
     align-items: center;
-    gap: 0.6rem;
+    gap: 0.8rem;
     font-size: 0.875rem;
     cursor: pointer;
 }
